// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterPhoto renders title and subtitle properties 1`] = `
<v-container-stub tag="div" class="footer">
  <v-list-stub tag="div" tile="true" twoline="true">
    <v-list-item-stub activeclass="" tag="div">
      <v-list-item-content-stub>
        <v-list-item-title-stub class="white--text">
          My title
        </v-list-item-title-stub>
        <v-list-item-subtitle-stub>
          My subtitle
        </v-list-item-subtitle-stub>
      </v-list-item-content-stub>
    </v-list-item-stub>
  </v-list-stub>
</v-container-stub>
`;

exports[`FooterPhoto renders title and subtitle slots 1`] = `
<v-container-stub tag="div" class="footer">
  <v-list-stub tag="div" tile="true" twoline="true">
    <v-list-item-stub activeclass="" tag="div">
      <v-list-item-content-stub>
        <v-list-item-title-stub class="white--text"><span>Slot title</span></v-list-item-title-stub> <span>Slot subtitle</span>
      </v-list-item-content-stub> <span>Slot action</span>
    </v-list-item-stub>
  </v-list-stub>
</v-container-stub>
`;
